# fastapi-swagger-ui-theme

./: .gitignore  CHANGELOG.md  LICENCE  MANIFEST.in  README.md  main.py  pyproject.toml
fastapi_swagger_ui_theme/: __init__.py  docs.py
fastapi_swagger_ui_theme/static/: swagger_theme_toggle.js  swagger_ui_custom.css  swagger_ui_dark.css  swagger_ui_toggle.css
test/: app.py  auth.py
