[project]
name = "fastapi-swagger-ui-theme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fastapi_swagger_ui_theme*"]
